# ERPAnalytics

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  go.mod  go.sum  main.go
analitycs/: analitycs.go
analytics/: analytics.go
data_structure/: maps.go  sets.go
endpoints_handlers/: entry_point.go
endpoints_handlers/productos/: analyse.go
endpoints_handlers/ventas/: analyse.go
placeholders/: placeholders.go
products_analytics/: products_analytics.go
sales_analytics/: sales_analytics.go
src/: main.rs
src/html/: apiDescription.html  index.html
src/mainPage/: index.html
src/products/: productsAnalytics.rs
src/sales/: salesAnalytics.rs
src/salesAnalyse/: mod.rs
src/structs/: mod.rs
types/: api.go  cierre.go  cliente.go  empleado.go  producto.go  productoDevuelto.go  productoSummary.go  productoVendido.go  types.go  venta.go  ventaSummary.go
