[package]
edition = "2021"
name = "ERPAnalytics"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
juniper = "0.15.9"
rand = "0.8.5"
reqwest = {version = "0.11", features = ["json"]}
serde = "1.0.137"
tokio = {version = "1", features = ["full"]}

[dependencies.rocket]
features = ["json"]
version = "0.5.0-rc.2"
